# heudiconv_app

./: Dockerfile  build_image  env-UC.yml  env-v1.0.20211006.yml  env.yml  mypy.ini  pyproject.toml  write_dockerfile
.github/workflows/: build-and-publish.yml
src/heudiconv_app/: a2cps.py  main.py
src/heudiconv_app/data/: bval_GE  bvec_GE
tools/: create_reference_jsons.py
